--- a/OnTheMap/Info.plist
+++ b/OnTheMap/Info.plist
@@ -23,7 +23,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>fb365362206864879</string>
+				<string>onthemap</string>
 			</array>
 		</dict>
 	</array>
